# edward

./: Cargo.toml  README.md  deploy-edward.sh  switch-edward.sh
src/: download.rs  fetch.rs  group_system.rs  main.rs  systems.rs
