[package]
name = "rhbot"
version = "0.1.0"
edition = "2021"

[dependencies]
obfstr = "0.4.4"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = [ "macros", "rt-multi-thread" ] }

[profile.dev]
opt-level = 0          
debug = true           
debug-assertions = true 
overflow-checks = true 
lto = false            
panic = 'unwind'       
incremental = true     
codegen-units = 256    
