[package]
name = "rhbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
obfstr = "0.4.4"
poise = "0.6.1"
rand = "0.9.2"
rayon = "1.10.0"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = [ "macros", "rt-multi-thread", "process", "fs" ] }

[profile.dev]
opt-level = 0          
debug = true           
debug-assertions = true 
overflow-checks = true 
lto = false            
panic = 'unwind'       
incremental = true     
codegen-units = 256    

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = true
incremental = false
